--- a/config/database.yml
+++ b/config/database.yml
@@ -20,9 +20,8 @@ development:
   reconnect: false
   database: teladventure_development
   pool: 5
-  username: root
-  password:
-  socket: /opt/local/var/run/mysql5/mysqld.sock
+  username: teladventure
+  password: gr@ndAdve11
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -33,9 +32,8 @@ test: &test
   reconnect: false
   database: teladventure_test
   pool: 5
-  username: root
-  password:
-  socket: /opt/local/var/run/mysql5/mysqld.sock
+  username: teladventure
+  password: gr@ndAdve11
 
 production:
   adapter: mysql
@@ -43,9 +41,8 @@ production:
   reconnect: false
   database: teladventure_production
   pool: 5
-  username: root
-  password: 
-  socket: /opt/local/var/run/mysql5/mysqld.sock
+  username: teladventure
+  password: gr@ndAdve11
 
 cucumber:
   <<: *test
